tests/spec/pass/loops_regression.aja
total = 0
for i in range(1, 5):
    total++
print(total)

done = True
count = 0
while done do:
    count++
    done = False
print(count)

do:
    print("once")
while False
