tests/spec/fail/for_range_two_vars.aja
for i, v in range(3):
    print(i)
